--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,3 +18,5 @@ jobs:
       - run: go get -v -t -d ./...
       - run: make
       - run: sudo apt-get install -y multitime && make benchmark
+      - run: docker build -f test.Dockerfile -t maytest .
+      - run: docker run maytest
