--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,5 +18,6 @@ jobs:
       - run: go get -v -t -d ./...
       - run: make
       - run: sudo apt-get install -y multitime && make benchmark
+      - run: sudo apt-get install docker-ce docker-ce-cli containerd.io
       - run: docker build -f test.Dockerfile -t maytest .
       - run: docker run maytest
