--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,21 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
   build:
     docker:
-      # specify the version
       - image: circleci/golang:1.14
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
     steps:
       - checkout
       - run: go get -v -t -d ./...
       - run: make
       - run: sudo apt-get install -y multitime && make benchmark
+  integrationtest:
+    docker:
+      - image: circleci/golang:1.14
+    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    steps:
+      - checkout
+      - run: sudo apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
       - run: sudo apt-get install docker-ce docker-ce-cli containerd.io
       - run: docker build -f test.Dockerfile -t maytest .
       - run: docker run maytest
