--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,10 @@ jobs:
       - run: sudo apt-get install docker-ce docker-ce-cli containerd.io
       - run: docker build -f test.Dockerfile -t maytest .
       - run: docker run maytest
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - integrationtest
+
