Fix pipeline config syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,10 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - integrationtest
+      - integrationtest:
           requires:
             - build
-      - benchmark
+      - benchmark:
           requires:
-            - build
             - integrationtest
 
