--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,10 @@ jobs:
       - run:
           name: Build test environment
           command: | 
-            docker build -f test.Dockerfile -t maytest .
+            sudo docker build -f test.Dockerfile -t maytest .
       - run:
           name: Execute test
-          command: docker run maytest
+          command: sudo docker run maytest
 workflows:
   version: 2
   build_and_test:
