--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,27 +21,16 @@ jobs:
           command: |
             sudo apt-get install -y multitime && make benchmark
   integrationtest:
-    docker:
-      - image: circleci/golang:1.14
-    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    machine: true
     steps:
       - checkout
-      - run: 
-          name: Install Docker
-          command: |
-            sudo apt-get update
-            sudo apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
-            curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
-            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
-            sudo apt-get update
-            sudo apt-get install docker-ce docker-ce-cli containerd.io
       - run:
           name: Build test environment
           command: | 
-            sudo docker build -f test.Dockerfile -t maytest .
+            docker build -f test.Dockerfile -t maytest .
       - run:
           name: Execute test
-          command: sudo docker run maytest
+          command: docker run maytest
 workflows:
   version: 2
   build_and_test:
