Add basic integration test, add arch build to pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,61 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2
+version: 2.1
+orbs:
+  golang: cci-orb/golang@0.1.8
 jobs:
-  build:
+  build-debian:
     docker:
-      # specify the version
       - image: circleci/golang:1.14
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
     steps:
       - checkout
       - run: go get -v -t -d ./...
-      - run: make
-      - run: sudo apt-get install -y multitime && make benchmark
+      - run: GOBIN=/go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}} make
+      - run: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}/may -v
+  build-arch:
+    docker:
+      - image: archlinux
+    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    steps:
+      - run: pacman -Syu --noconfirm
+      - run: pacman -S go make --noconfirm
+      - checkout
+      - run: go get -v -t -d ./...
+      - run: GOBIN=/go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}} make
+      - run: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}/may -v
+  benchmark:
+    docker:
+      - image: circleci/golang:1.14
+    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    steps:
+      - checkout
+      - run: go get -v -t -d ./...
+      - run: make release
+      - run: 
+          name: Execute basic benchmark
+          command: |
+            sudo apt-get install -y multitime && make benchmark
+  integrationtest:
+    machine: true
+    steps:
+      - checkout
+      - run:
+          name: Build test environment
+          command: | 
+            docker build -f test.Dockerfile -t maytest .
+      - run:
+          name: Execute test
+          command: docker run maytest
+workflows:
+  version: 2.1
+  build_and_test:
+    jobs:
+      - build-debian
+      - build-arch
+      - integrationtest:
+          requires:
+            - build-debian
+            - build-arch
+      - benchmark:
+          requires:
+            - integrationtest
+
