Adjust arch pipeline config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ workflows:
       - integrationtest-debian:
           requires:
             - build-debian
-      - integrationtest-darch:
+      - integrationtest-arch:
           requires:
             - build-arch
 
